# PiFire

./: .gitignore  README.md  app.py  board-config.py  bt_diag.py  button.py  config.py  control.py  display_base_480x800.py  display_launch.py  display_process.py  display_pygame_480x800.py  display_pygame_480x800b.py  display_pygame_480x800m.py  prek.toml  pyproject.toml  ruff.toml  updater.py  wizard.py
auto-install/: install-debian.sh  install-fedora.sh  install.sh  pifire-dietpi.sh  requirements.txt
common/: __init__.py  api_commands.py  app.py  backups.py  common.py  datastore.py  datastore_accessors.py  defaults.py  ft232h.py  i2c_bus.py  mcp2221.py  modes.py  process_mon.py  server_status.py  settings_migration.py  sqlite_log_handler.py  sqlite_queue.py  system.py  usb_serial.py  valkey_handler.py  valkey_queue.py
controller/: base.py  controllers.json  fuzzy.py  grill_sim.py  ml.py  mpc.py  mpc_allocator.py  mpc_model.py  mpc_net.py  mpc_policy_net.npz  mpc_policy_net_fan.npz  pid.py  pid_ac.py  pid_base.py  pid_clamping.py  pid_clamping_percent_pb.py  pid_parallel.py  pid_sp.py  update_fuzzy.py  update_ml.py  update_mpc.py
display/: _button_input.py  _encoder_input.py  _luma_panel.py  base_240x240.py  base_240x320.py  base_320x480.py  base_fixed.py  base_flex.py  dsi_1024x600t.json  dsi_1024x600t.py  dsi_1024x768t.json  dsi_1024x768t.py  dsi_1280x720t.json  dsi_1280x720t.py  dsi_800x480t.py  flexobject.py  flexrect.py  ili9341.py  ili9341b.py  ili9341e.py  ili9341em.py  ili9341f.py  ili9488.py  ili9488b.py  ili9488e.py  ili9488em.py  none.py  protoflex.py  prototype.py  pygame_240x320.py  pygame_240x320b.py  pygame_64x128.py  qtapp.py  qtbackend.py  qtquick_dsi_1024x600t.json  qtquick_dsi_1024x600t.py  qtquick_dsi_1280x720t.json  qtquick_dsi_1280x720t.py  qtquick_flex.py  screen_power.py  (+9 more)
distance/: _serial_tof_base.py  _tof_base.py  hcsr04.py  none.py  prototype.py  sen0628.py  vl53l0x.py  vl53l1x.py  vl53l4cd.py
docs/: mcp2210.md  web-test-findings-2026-07-17.md
file_mgmt/: common.py  cookfile.py  media.py  recipes.py
grillplat/: emc2301.py  ft232h_relay.py  numato_usbrelay.py  prototype.py  raspberry_pi_all.py  system_commands.py  x86_numato.py  x86_numato_emc2101.py
mcp2210/: __init__.py  _protocol.py  mcp2210.py  pin.py  spi.py
notify/: influxdb_handler.py  mqtt_handler.py  notifications.py  wled_discovery.py  (+2 more)
(+617 files in other folders)
