[project]
name = "pifire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apprise>=1.11.0",
    "bleak>=3.0.2",
    "bluepy>=1.3.0",
    "flask>=3.1.3",
    "flask-mobility>=2.0.1",
    "flask-qrcode>=3.2.0",
    "flask-socketio>=5.6.1",
    "gunicorn>=26.0.0",
    "hid>=1.0.4",
    "influxdb-client>=1.50.0",
    "netifaces>=0.11.0",
    "paho-mqtt>=2.1.0",
    "pyserial>=3.5",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "ratelimitingfilter>=1.5",
    "valkey>=8.0.0",
    "scikit-fuzzy>=0.5.0",
    "scikit-learn>=1.9.0",
    "uuid>=1.30",
    "zeroconf>=0.149.17",
    "do-mpc[full]>=5.1.1",
    "gevent>=26.5.0",
    "adafruit-extended-bus>=1.0.2",
    "adafruit-circuitpython-emc2101>=1.0.0",
    "adafruit-circuitpython-mcp9600>=2.0.10",
    "gpiozero>=2.0.1",
    "pygame-ce>=2.5.7",
]

[tool.uv.sources]
valkey = { git = "https://github.com/valkey-io/valkey-py" }

[dependency-groups]
dev = [
    "ipython>=9.14.1",
    "pytest>=8.0.0",
]
