[project]
name = "pifire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apprise>=1.11.0",
    "bleak>=3.0.2",
    "bluepy>=1.3.0",
    "flask>=3.1.3",
    "flask-mobility>=2.0.1",
    "flask-qrcode>=3.2.0",
    "flask-socketio>=5.6.1",
    "gunicorn>=26.0.0",
    "hidapi>=0.14.0",
    "influxdb-client>=1.50.0",
    "netifaces>=0.11.0",
    "paho-mqtt>=2.1.0",
    "pyftdi>=0.55.0",
    "pyserial>=3.5",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "ratelimitingfilter>=1.5",
    "scikit-fuzzy>=0.5.0",
    "scikit-learn>=1.9.0",
    "thermoworks-cloud>=0.1.13",
    "uuid>=1.30",
    "zeroconf>=0.149.17",
    "do-mpc[full]>=5.1.1",
    "adafruit-extended-bus>=1.0.2",
    "adafruit-circuitpython-emc2101>=1.0.0",
    "adafruit-circuitpython-busdevice>=5.0.0",
    "adafruit-circuitpython-mcp9600>=2.0.10",
    "adafruit-circuitpython-vl53l0x>=3.6.19",
    "adafruit-circuitpython-vl53l4cd>=1.3.6",
    "adafruit-circuitpython-vl53l1x>=1.0.0",
    "gpiozero>=2.0.1",
    "pygame-ce>=2.5.7",
    "pyside6>=6.11.1",
    "easymcp2221>=1.8.4",
]

[dependency-groups]
dev = [
    "ipython>=9.14.1",
    "pytest>=8.0.0",
]
